<?xml version="1.0"?>
<package format="3">
  <name>canopen_master</name>
  <version>0.8.5</version>
  <description>CiA(r) CANopen 301 master implementation with support for interprocess master synchronisation.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/canopen_master</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>libboost-dev</exec_depend>
  <exec_depend>libboost-atomic-dev</exec_depend>
  <exec_depend>libboost-chrono-dev</exec_depend>
  <exec_depend>libboost-thread-dev</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>socketcan_interface</build_depend>
  <exec_depend>socketcan_interface</exec_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <canopen_master plugin="${prefix}/master_plugin.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
