<?xml version="1.0"?>
<package format="3">
  <name>socketcan_bridge</name>
  <version>0.8.5</version>
  <description>Conversion nodes for messages from SocketCAN to a ROS Topic and vice versa.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="ivor@iwanders.net">Ivor Wanders</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/socketcan_bridge</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <depend>can_msgs</depend>
  <depend>rclcpp</depend>
  <depend>socketcan_interface</depend>
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->

  <!-- <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend> -->

  <!-- <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend> -->
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
